[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/Game/Game.gd" type="Script" id=1]
[ext_resource path="res://sprites/floor/FloorTiles.tres" type="TileSet" id=2]
[ext_resource path="res://sprites/presents/red-present-pickup.png" type="Texture" id=3]
[ext_resource path="res://sprites/presents/green-present-pickup.png" type="Texture" id=4]
[ext_resource path="res://sprites/presents/blue-present-pickup.png" type="Texture" id=5]
[ext_resource path="res://sprites/presents/yellow-present-pickup.png" type="Texture" id=6]
[ext_resource path="res://_scenes/Game/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://_scenes/Game/Table.tscn" type="PackedScene" id=8]
[ext_resource path="res://_scenes/Game/HUD.tscn" type="PackedScene" id=9]
[ext_resource path="res://font/ps2p.tres" type="DynamicFont" id=10]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="Floor" type="TileMap" parent="."]
scale = Vector2( 4, 4 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 1, 0, 2, 1, 0, 3, 2, 0, 4, 2, 0, 5, 1, 0, 6, 2, 0, 7, 3, 0, 65536, 0, 0, 65537, 2, 0, 65538, 2, 0, 65539, 1, 0, 65540, 1, 0, 65541, 2, 0, 65542, 2, 0, 65543, 3, 0, 131072, 0, 0, 131073, 1, 0, 131074, 2, 0, 131075, 2, 0, 131076, 2, 0, 131077, 1, 0, 131078, 2, 0, 131079, 3, 0, 196608, 0, 0, 196609, 1, 0, 196610, 2, 0, 196611, 1, 0, 196612, 1, 0, 196613, 2, 0, 196614, 1, 0, 196615, 3, 0, 262144, 0, 0, 262145, 2, 0, 262146, 1, 0, 262147, 2, 0, 262148, 2, 0, 262149, 1, 0, 262150, 2, 0, 262151, 3, 0 )

[node name="Droppers" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 16, 0 )
scale = Vector2( 4, 4 )
__meta__ = {
"_edit_group_": true
}

[node name="dropper_0" type="Sprite" parent="Droppers"]
position = Vector2( 12.5, 34 )
texture = ExtResource( 3 )

[node name="dropper_1" type="Sprite" parent="Droppers"]
position = Vector2( 12.5, 66 )
texture = ExtResource( 4 )

[node name="dropper_2" type="Sprite" parent="Droppers"]
position = Vector2( 12.5, 98 )
texture = ExtResource( 5 )

[node name="dropper_3" type="Sprite" parent="Droppers"]
position = Vector2( 12.5, 130 )
texture = ExtResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2( 0.25, 0.25 )
anchor_mode = 0
current = true
__meta__ = {
"_edit_lock_": true
}

[node name="Character" parent="." instance=ExtResource( 7 )]
position = Vector2( -96, 12 )
scale = Vector2( 4, 4 )

[node name="Tables" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 32, 0 )
scale = Vector2( 4, 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="table_0" parent="Tables" instance=ExtResource( 8 )]
position = Vector2( 176, 32 )

[node name="table_1" parent="Tables" instance=ExtResource( 8 )]
position = Vector2( 176, 64 )
table_id = 1

[node name="table_2" parent="Tables" instance=ExtResource( 8 )]
position = Vector2( 176, 96 )
table_id = 2

[node name="table_3" parent="Tables" instance=ExtResource( 8 )]
position = Vector2( 176, 128 )
table_id = 3

[node name="PlayerPositions" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 16, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="pos0" type="Node2D" parent="PlayerPositions"]
position = Vector2( 160, 128 )

[node name="pos1" type="Node2D" parent="PlayerPositions"]
position = Vector2( 160, 256 )

[node name="pos2" type="Node2D" parent="PlayerPositions"]
position = Vector2( 160, 384 )

[node name="pos3" type="Node2D" parent="PlayerPositions"]
position = Vector2( 160, 512 )

[node name="HUD" parent="." instance=ExtResource( 9 )]
margin_left = 20.0
margin_top = 20.0
margin_right = 356.0
margin_bottom = 44.0

[node name="FailureText" type="Label" parent="."]
visible = false
margin_left = 432.0
margin_top = 32.0
margin_right = 672.0
margin_bottom = 83.0
custom_fonts/font = ExtResource( 10 )
text = "YOU MISSED
A DELIVERY"
align = 1
valign = 1

[node name="Cooldown" type="Timer" parent="FailureText"]
process_mode = 0
wait_time = 2.0
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="FailureText/Cooldown" to="." method="_on_Cooldown_timeout"]
